# comfy-flux-wan-automation

./: .env  README.md  advanced_batch_generator.py  advanced_instagram_generator.py  batch_instagram_generator.py  check_models.py  cloud_yoga_generator.py  enhanced_promptsmith.py  fal_yoga_generator.py  fal_yoga_generator_fixed.py  flux_lora_generator.py  flux_lora_generator_fixed.py  generate_images.py  hf_yoga_generator.py  hf_yoga_generator_50.py  instagram_generator.py  instagram_lora_generator.py  instagram_lora_generator_fixed.py  lora_civitai_manager.py  one-shot.sh  promptsmith_client.py  pyproject.toml  setup.sh  simple_fal_generator.py  simple_test.py  simple_test_fixed.py  simple_test_minimal_fix.py  test_promptsmith.py  wan_instagram_generator.py  yoga_beach_generator_final.py
configs/: config.yaml
generated_images/: generation_log_20251013.json  heat_sensitive_summary.json  instagram_character_batch_summary.json  multi_lora_character_multi_lora_summary.json
scripts/: comfy-cli.py  comfy-ctl.sh  lora-manager.sh
src/: config.py
src/core/: comfy_manager.py  flux_handler.py
workflows/: batch_1760176129.json  batch_1760176130.json  batch_1760176131.json  batch_1760176132.json  batch_1760176133.json  instagram_1760175932.json  wan_instagram_1760176005.json  wan_instagram_1760176026.json  wan_instagram_1760176093.json  wan_instagram_1760190263.json
workflows/advanced/: advanced_instagram_1760176556_1.json  advanced_instagram_1760176556_1.meta.json  advanced_instagram_1760176558_2.json  advanced_instagram_1760176558_2.meta.json  (+6 more)
(+6 files in other folders)
