[project]
name = "comfy-flux-wan-automation"
version = "0.1.0"
description = "Automated ComfyUI with Flux, WAN2.2, LoRA, and AI prompt optimization"
authors = [
    {name = "Jonathan Mallinger"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "charset-normalizer (>=3.4.3,<4.0.0)",
    "idna (>=3.11,<4.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fal-client (>=0.8.0,<0.9.0)",
    "replicate (>=1.0.7,<2.0.0)",
    "gradio-client (>=1.13.3,<2.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
